--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.76.9",
     "react-native-circular-progress": "^1.4.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-mmkv": "^3.2.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0"
   },
