--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "date-fns": "^4.1.0",
     "expo": "^53.0.7",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-circular-progress": "^1.4.1",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-mmkv": "^3.2.0",
+    "react-native-mmkv": "^2.10.1",
+    "react-native-paper": "^5.14.0",
+    "react-native-paper-dates": "^0.22.40",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0"
+    "react-native-screens": "~4.10.0",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
