--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "date-fns": "^4.1.0",
@@ -19,12 +22,8 @@
     "react-native": "0.79.2",
     "react-native-circular-progress": "^1.4.1",
     "react-native-dropdown-picker": "^5.4.6",
-    "react-native-mmkv": "^2.10.1",
-    "react-native-paper": "^5.14.0",
-    "react-native-paper-dates": "^0.22.40",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "react-native-screens": "~4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
