--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.79.2",
     "react-native-circular-progress": "^1.4.1",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0"
   },
